# Dissimilarity-Tree-Reproduction

./: .gitignore  README.md  replicate.py
analysis/master_project/: accuracy.py  accuracyChart.py  accuracyDisstree.py  accuracyGraph.py  accuracyTable.py  close.py  datasetCopy.py  lshExample.py  minhashDisstreeComparison.py  objectSearch.py  plotExecutionTime.py  precisionRecallGraphDissTree.py  precisionRecallGraphSingle.py  precisionRecallGraphTotal.py  queryFileToBestMatchPlot.py  queryTimes.py  quicciminhashdemo.py  randompermutationPlot.py  signatureSearch.py  smartpermutation.py  timesPerObject.py  trendingWorngObjects.py
analysis/master_project/scripts/: prettytable.py
analysis/preparatory_project_results/: accuracy.py  longestquery.py  times_per_object.py  times_per_object_normalized.py
analysis/preparatory_project_results/horizontal descripts 3 times/: both_measurements_sequential.json  horizontal_measurements_sequential.json
analysis/preparatory_project_results/query_time_results/: all_combined_results.csv  authors_indexed_search_times.csv  combined_computed_indexed_search_times.csv  combined_measurements_sequential.json  horizontal_computed_indexed_search_times.csv
input/SHREC2016_partial_retrieval/: Hampson_query_cla_6.txt  Hampson_target_cla_6.txt
input/precomputed_results/: figure10_sequential_search_2500.json
output/project-results/: times_per_object.py  times_per_object_normalized.py
res/shaders/: simple.frag  simple.vert  singlechannel.frag  singlechannel.vert
scripts/: ubuntu_install_dependencies_except_cuda.sh
src/libShapeDescriptor/src/shapeDescriptor/: libraryBuildSettings.h
src/partialRetrieval/: CMakeLists.txt
src/partialRetrieval/lib/lodepng/: lodepng.cpp  lodepng.h  lodepng_benchmark.cpp  lodepng_unittest.cpp  lodepng_util.cpp
src/partialRetrieval/lib/nvidia-samples-common/nvidia/: helper_cuda.h
src/partialRetrieval/src/projectSymmetry/: settings.h
src/partialRetrieval/src/projectSymmetry/clustering/: ClusterBuilder.cpp  ClusterBuilder.h  ClusterIO.cpp  ClusterIO.h  ClusteredQuiccImage.cpp  ClusteredQuiccImage.h  DiskBasedImageRegistry.cpp  DiskBasedImageRegistry.h  IndexQueryer.cpp  IndexQueryer.h  QuiccImageTreeNode.h  SequentialIndexQueryer.cpp  SequentialIndexQueryer.h
src/partialRetrieval/src/projectSymmetry/descriptors/: areaCalculator.cpp  areaCalculator.h  binaryRICIConverter.cu  binaryRICIConverter.h  flexibleQUICCISearcher.cu  flexibleQUICCISearcher.h  quicciStats.cu  quicciStats.h  quicciStatsCPU.cpp  quicciStatsCPU.h
src/partialRetrieval/src/projectSymmetry/lsh/: Hashtable.cpp  Hashtable.h  HashtableIO.cpp  HashtableIO.h  Minhash.cpp  Permutation.cpp  Permutation.h  Signature.cpp  Signature.h  SignatureBuilder.cpp  SignatureBuilder.h  SignatureIO.cpp  SignatureIO.h
src/partialRetrieval/src/projectSymmetry/types/: BoolArray.h  Cluster.h  ClusterEntry.h  filesystem.h
src/partialRetrieval/src/projectSymmetry/utilities/: Cache.h  customWeightedHamming.cuh
src/partialRetrieval/src/projectSymmetry/visualisation/: GLUtils.cpp  SymmetryVisualiser.cpp  SymmetryVisualiser.h  VAOGenerator.cpp  VAOGenerator.h  shader.hpp
src/partialRetrieval/tests/: TestBlockification.cpp
src/partialRetrieval/tools/alignmentExperiment/: main.cpp
src/partialRetrieval/tools/areaCalculator/: main.cpp
src/partialRetrieval/tools/clusterbuilder/: main.cpp
src/partialRetrieval/tools/descriptorDumper/: main.cpp
src/partialRetrieval/tools/descriptorSignatureTest/: main.cpp
src/partialRetrieval/tools/edgeRemovalExperiment/: Histogram.cpp  Histogram.h  main.cpp
src/partialRetrieval/tools/hashtableBuilder/: main.cpp
src/partialRetrieval/tools/hashtableSearcher/: main.cpp
src/partialRetrieval/tools/indexWalker/: main.cpp
src/partialRetrieval/tools/indexedClusterSearcher/: main.cpp
src/partialRetrieval/tools/lshMatching/: DescriptorSignature.h  main.cpp
src/partialRetrieval/tools/objectSearch/: main.cpp
src/partialRetrieval/tools/occurrenceCounter/: main.cpp
src/partialRetrieval/tools/querysetgenerator/: main.cpp
src/partialRetrieval/tools/remeshedCorrespondenceFinder/: main.cpp
src/partialRetrieval/tools/sequentialClusterSearcher/: main.cpp
src/partialRetrieval/tools/shrec2013-runner/: build_index.sh  collate_results.py  compute_images.py  run_objectSearch_benchmark.sh
src/partialRetrieval/tools/shrec2013-runner/SHREC2013/: README  datasetSHREC2013_data.mat  evaluation.m  partiality.txt  query.cla  target.cla
src/partialRetrieval/tools/shrec2013-runner/SHREC2013/c++/: CMakeLists.txt  Clase.h  Evaluator.cpp  Evaluator.h  Makefile  README  evaluator2  main.cpp  util.cpp  util.h
src/partialRetrieval/tools/shrec2016-runner/: PR.txt  average_relative_score.csv  collate_indexing_benchmark_results.py  collate_objectSearch_indexed_results.py  collate_results_by_area.py  collate_results_into_confusion_matrix.py  collate_results_quicci_modification_evaluation.py  collate_results_shrec2016_style.py  collate_shrec_2016_all.sh  collate_simplesearch_results.py  compute_images.py  compute_relative_score_chart.py  indexed_benchmark_collated.txt  run_index_construction.sh  run_indexed_search.sh  run_objectSearch_32x32.sh  run_objectSearch_64x64.sh  run_objectSearch_96x96.sh  run_objectSearch_pipeline_evaluation.sh  run_object_search.sh  run_sequential_search.sh  run_simplesearch.py  set_32x32_mode.sh  set_64x64_mode.sh  set_96x96_mode.sh  timings_100000_queries.csv
src/partialRetrieval/tools/shrec2016-runner/metrics/: Breuckmann_query_cla_6.txt  Kinect_query_cla_6.txt  metrics  metrics.cpp  metrics_Artificial_Q25.txt  metrics_Artificial_Q40.txt  metrics_Breuckmann_View1.txt  metrics_Breuckmann_View2.txt  metrics_Breuckmann_View3.txt  metrics_Kinect_View1.txt  metrics_Kinect_View2.txt  metrics_Kinect_View3.txt
src/partialRetrieval/tools/signatureBuilder/: main.cpp
src/partialRetrieval/tools/signatureMatchingTest/: main.cpp
src/partialRetrieval/tools/signatureSearcher/: main.cpp
src/partialRetrieval/tools/simplesearch/: RICIUtils.cpp  main.cpp
src/partialRetrieval/tools/smartquiccirenderer/: main.cpp
(+1557 files in other folders)
